# forgeguard

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  _typos.toml  bacon.toml  cliff.toml  clippy.toml  deny.toml  docker-compose.yml  forgeguard.example.toml  forgeguard.toml
.claude/context/: 00-document-index.md  01-discussion-summary.md  02-technical-saas-integration.md  03-technical-self-hosted-data-plane.md  04-multi-region-dr-architecture.md  08-technical-control-plane-ui.md  09-technical-authorization-testing.md  11-technical-identity-engine-rust.md  12-technical-back-office.md  13-technical-sdk-architecture-conformance.md  14-tutorial-todo-app.md  authn-wiring.md  aws-arn-formats.md  ci.md  cli.md  cluster.md  commit-and-release.md  container-builds.md  control-plane.md  cors.md  demo-app.md  dependency-constraints.md  feature-flags.md  infra-control-plane.md  linting-and-clippy.md  newtypes.md  optimistic-locking.md  params-struct-rule.md  request-signing.md  saas-architecture.md  verified-permissions.md  visibility-conventions.md  xtask-control-plane-dev.md  xtask-control-plane-tools.md  xtask-lint.md  xtask-wrapper.md
.claude/designs/: authn-core-shaping.md  authn-shaping.md  authz-core-shaping.md  authz-shaping.md  breadboard-issues-10-11-12.md  core-shaping.md  cors-shaping.md  github-issues.md  http-shaping.md  proxy-shaping.md  scaffolding-patterns.md  spike-flag-evaluation.md
.claude/plans/: 2026-03-25-authn-core.md  2026-03-25-authz-core.md  2026-03-25-forgeguard-core.md  2026-03-25-xtask-lint-overhaul.md  2026-03-26-feature-flag-proxy-integration.md  2026-03-28-cors-v1-pure-types-config.md  2026-03-28-cors-v2v3-proxy-wiring.md
.config/: rail.toml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml  README.md
crates/agent/src/: main.rs
crates/audit/: Cargo.toml  README.md
crates/audit-core/: Cargo.toml  README.md
crates/authn/: Cargo.toml  README.md
crates/authn-core/: Cargo.toml  README.md
crates/authn-core/src/: builder.rs  chain.rs  credential.rs  error.rs  identity.rs  jwt_claims.rs  lib.rs  resolver.rs  signing.rs  signing_key_store.rs  static_api_key.rs
crates/authn/src/: claims.rs  config.rs  ed25519_resolver.rs  error.rs  jwks.rs  lib.rs  resolver.rs
crates/authz/: Cargo.toml  README.md
crates/authz-core/: Cargo.toml  README.md
crates/authz-core/src/: context.rs  decision.rs  engine.rs  error.rs  lib.rs  query.rs  static_engine.rs
crates/authz/src/: cache.rs  config.rs  engine.rs  error.rs  lib.rs  tiered_cache.rs  translate.rs
crates/back-office/: Cargo.toml  README.md
crates/back-office/src/: main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: aws.rs  check.rs  keygen.rs  main.rs  routes.rs
crates/cli/src/policies/: mod.rs  sync.rs  test.rs  validate.rs
crates/control-plane/: Cargo.toml  README.md
crates/control-plane/src/: app.rs  auth.rs  cli.rs  config.rs  dynamo_store.rs  error.rs  etag.rs  handlers.rs  lib.rs  main.rs  membership_store.rs  metrics.rs  signing_key.rs  signing_key_store.rs  store.rs
crates/control-plane/src/dynamo_store/: mod.rs  tests.rs
crates/control-plane/src/handlers/: keys.rs  mod.rs  tests.rs
crates/control-plane/src/handlers/tests/: basic.rs  conditional_get.rs  crud.rs  draft.rs  metrics_412.rs  metrics_endpoint.rs  mod.rs  optimistic_locking.rs  proxy_config.rs
crates/control-plane/src/store/: mod.rs  tests.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: action.rs  cedar.rs  cedar_ident.rs  config_version.rs  default_policy.rs  error.rs  features.rs  fgrn.rs  lib.rs  org.rs  percentage.rs  permission.rs  saga_id.rs  segment.rs
crates/core/src/cedar/: compile.rs  mod.rs  schema.rs
crates/core/src/features/: mod.rs  testing.rs  tests.rs
crates/ffi-python/: Cargo.toml  README.md
crates/ffi-wasm/: Cargo.toml  README.md
crates/fg-lambdas/: Cargo.toml
crates/fg-lambdas/src/: lib.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: config.rs  config_raw.rs  config_tests.rs  config_types.rs  cors.rs  credential.rs  debug.rs  error.rs  headers.rs  lib.rs  method.rs  public.rs  query.rs  route.rs  validate.rs
crates/proxy/: Cargo.toml  Dockerfile  README.md
crates/proxy-core/: Cargo.toml  README.md
crates/proxy-core/src/: error.rs  lib.rs  membership.rs  pipeline.rs  pipeline_config.rs  pipeline_membership_tests.rs  pipeline_outcome.rs  pipeline_tests.rs  request_input.rs  source.rs  tenant.rs
crates/proxy/src/: cli.rs  main.rs  proxy.rs
crates/proxy/tests/: integration.rs
crates/sdk/: Cargo.toml  README.md
docker/: agent.Dockerfile  back-office.Dockerfile  cli.Dockerfile  control-plane.Dockerfile  proxy.Dockerfile
examples/control-plane/: orgs.sample.json  orgs.test.json  proxy.toml
examples/todo-app/: Dockerfile  README.md  app.py  docker-compose.yml  forgeguard.toml  prometheus.yml  pyproject.toml
infra/control-plane/: .env  cdk.json  package.json
infra/dev/: .env.example  README.md  cdk.json  package.json  tsconfig.json  users.example.toml
lib/forgeguard-axum/: CHANGELOG.md  Cargo.toml  README.md
lib/forgeguard-axum/src/: extractor.rs  guard.rs  lib.rs  middleware.rs
xtask/: Cargo.toml  README.md  seed.toml
xtask/cargo-xtask/: Cargo.toml  README.md
xtask/cargo-xtask/src/: args.rs  main.rs  staleness.rs
xtask/src/: lib.rs  lint.rs  main.rs  signing.rs
xtask/src/control_plane/: cedar_core.rs  cedar_io.rs  curl.rs  dev.rs  dynamo_local.rs  lambda_core.rs  mod.rs  op.rs  op_core.rs  schema.rs  seed.rs  seed_core.rs  test.rs  token.rs
xtask/src/control_plane/cedar/: diff.rs  mod.rs  status.rs  sync.rs
xtask/src/control_plane/cedar_core/: config.rs  desired.rs  mod.rs  rbac.rs  schema.rs  store.rs  sync.rs
xtask/src/control_plane/infra/: deploy.rs  destroy.rs  diff.rs  mod.rs  status.rs
xtask/src/control_plane/lambda/: build.rs  deploy.rs  list.rs  mod.rs
xtask/src/dev/: mod.rs  setup.rs  setup_core.rs  token.rs  users.rs
xtask/src/lib_cmd/: mod.rs  release.rs  version.rs
xtask/src/lint/: hooks.rs  mod.rs
xtask/tests/: signing_compat.rs
(+9 files in other folders)
