[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]
rust-version = "1.91.0"

[workspace.lints.clippy]
# Note: unwrap_used and expect_used are enabled in lib.rs/main.rs via #![deny(...)]
# rather than here, so test code can still use .unwrap() for brevity.
# See crates/*/src/lib.rs and crates/*/src/main.rs for the denials.

# Make Impossible States Impossible — force explicit variant names, no glob imports
enum_glob_use = "deny"
wildcard_imports = "deny"

# Parse Don't Validate — cleaner early returns at boundaries
manual_let_else = "warn"

# Algebraic Data Types — catch enums with huge size disparity between variants
large_enum_variant = "warn"

# Clarity — make clones and copies visible and intentional
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
redundant_closure_for_method_calls = "warn"
needless_pass_by_value = "warn"

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]

# Internal crates — pure
forgeguard_core = { version = "0.0.0", path = "crates/core" }
forgeguard_authn_core = { version = "0.0.0", path = "crates/authn-core" }
forgeguard_authz_core = { version = "0.0.0", path = "crates/authz-core" }
forgeguard_audit_core = { version = "0.0.0", path = "crates/audit-core" }
forgeguard_sdk = { version = "0.0.0", path = "crates/sdk" }

# Internal crates — I/O
forgeguard_authn = { version = "0.0.0", path = "crates/authn" }
forgeguard_authz = { version = "0.0.0", path = "crates/authz" }
forgeguard_audit = { version = "0.0.0", path = "crates/audit" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.5", features = ["derive", "string", "env"] }

# Error handling
color-eyre = "0.6"
thiserror = "2.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hashing (stable, portable — used for feature flag rollout bucketing)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Output formatting
anstream = "1.0"
