[workspace]
members = ["xtask/", "xtask/cargo-xtask/", "crates/*", "lib/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]
rust-version = "1.91.1"

[workspace.lints.clippy]
# Note: unwrap_used and expect_used are enabled in lib.rs/main.rs via #![deny(...)]
# rather than here, so test code can still use .unwrap() for brevity.
# See crates/*/src/lib.rs and crates/*/src/main.rs for the denials.

# Make Impossible States Impossible — force explicit variant names, no glob imports
enum_glob_use = "deny"
wildcard_imports = "deny"

# Parse Don't Validate — cleaner early returns at boundaries
manual_let_else = "warn"

# Algebraic Data Types — catch enums with huge size disparity between variants
large_enum_variant = "warn"

# Clarity — make clones and copies visible and intentional
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
redundant_closure_for_method_calls = "warn"
needless_pass_by_value = "warn"

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]

# Output formatting
anstream = "1.0"

# Async trait support
async-trait = "0.1"

aws-config = "1"
aws-sdk-cloudformation = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-dynamodb = "1"
aws-sdk-lambda = "1"
aws-sdk-sfn = "1"
aws-sdk-verifiedpermissions = "1"

# AWS SDKs
aws_lambda_events = { version = "0.16", features = ["dynamodb"] }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }

# Binary data encoding
base64 = "0.22"

# Binary data
bytes = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "string", "env"] }

# Error handling
color-eyre = "0.6"

# Environment variables
dotenvy = "0.15"

# Ed25519 signatures
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }

# Published lib crates
forgeguard-axum = { version = "0.1.0", path = "lib/forgeguard-axum" }

forgeguard_audit = { version = "0.0.0", path = "crates/audit" }
forgeguard_audit_core = { version = "0.0.0", path = "crates/audit-core" }

# Internal crates — I/O
forgeguard_authn = { version = "0.0.0", path = "crates/authn" }
forgeguard_authn_core = { path = "crates/authn-core", version = "^0.0.0", features = [
  "test-support",
] } #unified
forgeguard_authz = { version = "0.0.0", path = "crates/authz" }
forgeguard_authz_core = { path = "crates/authz-core", version = "^0.0.0", features = [
  "test-support",
] } #unified
forgeguard_control_plane = { path = "crates/control-plane", version = "^0.0.0" } #unified

# Internal crates — pure
forgeguard_core = { version = "0.0.0", path = "crates/core" }
forgeguard_http = { version = "0.0.0", path = "crates/http" }
forgeguard_proxy_core = { version = "0.0.0", path = "crates/proxy-core" }
forgeguard_sdk = { version = "0.0.0", path = "crates/sdk" }

# HTTP body utilities (testing)
http-body-util = "0.1"

# JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Lambda
lambda_http = "1.1"
lambda_runtime = "1.1"

# libc (Unix process management)
libc = "0.2"

# Caching
lru = "0.17"

# Routing
matchit = "0.9"

# Terminal colors
owo-colors = { version = "4", features = ["supports-colors"] }

# Pingora reverse proxy framework
pingora = "0.8"
pingora-core = "0.8"
pingora-error = "0.8"
pingora-http = "0.8"
pingora-proxy = "0.8"

# Metrics
prometheus = "0.13"

rand = "^0.8.5" #unified

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = "4"
serde_json = "1.0"

# Temp files (testing)
tempfile = "3"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
toml = "1.1"
toml_edit = "0.25"
# Tower middleware
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL parsing
url = "2.5"

# UUID
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Hashing (stable, portable — used for feature flag rollout bucketing)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Archive
zip = "2"
