[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "MIT"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
aws-config = { workspace = true }
aws-sdk-cloudformation = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-verifiedpermissions = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }
duct = "1.1.0"
glob = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
zip = { workspace = true }
