[package]
name = "forgegate_agent"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "ForgeGate data plane agent — self-hosted deployment"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgegate-agent"
path = "src/main.rs"

[dependencies]
forgegate_core = { workspace = true }
forgegate_authz_core = { workspace = true }
forgegate_audit_core = { workspace = true }
forgegate_authz = { workspace = true }
forgegate_audit = { workspace = true }
axum = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
