[package]
name = "forgeguard_agent"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard data plane agent — self-hosted deployment"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgeguard-agent"
path = "src/main.rs"

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_audit_core = { workspace = true }
forgeguard_authz = { workspace = true }
forgeguard_audit = { workspace = true }
axum = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
