[package]
name = "forgegate_audit_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "Auditing domain types, event log schema, and metric definitions (pure)"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgegate_audit_core"
path = "src/lib.rs"

[dependencies]
forgegate_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
