[package]
name = "forgegate_audit"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "Auditing I/O — DynamoDB/S3 event log, CloudTrail integration, metric emission"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgegate_audit"
path = "src/lib.rs"

[dependencies]
forgegate_core = { workspace = true }
forgegate_audit_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
