[package]
name = "forgeguard_audit"
version = "0.0.0"
publish = false
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Auditing I/O — DynamoDB/S3 event log, CloudTrail integration, metric emission"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_audit"
path = "src/lib.rs"

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_audit_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
