[package]
name = "forgeguard_authn_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Authentication domain types and typestate flow definitions (pure)"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_authn_core"
path = "src/lib.rs"

[dependencies]
forgeguard_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
