[package]
name = "forgeguard_authn_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Authentication domain types and identity resolution (pure). Internal dep — use forgeguard-axum for the public API."
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_authn_core"
path = "src/lib.rs"

[features]
test-support = []

[dependencies]
forgeguard_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
