[package]
name = "forgegate_authn"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "Authentication I/O — Cognito adapter, SES/SNS side effects"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgegate_authn"
path = "src/lib.rs"

[dependencies]
forgegate_core = { workspace = true }
forgegate_authn_core = { workspace = true }
forgegate_audit_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
