[package]
name = "forgeguard_authn"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Authentication I/O — Cognito adapter, SES/SNS side effects"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_authn"
path = "src/lib.rs"

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_authn_core = { workspace = true }
forgeguard_audit_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
