[package]
name = "forgeguard_authz_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Authorization domain types, Cedar policy types, and permission definitions (pure)"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_authz_core"
path = "src/lib.rs"

[dependencies]
forgeguard_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
