[package]
name = "forgeguard_authz"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Authorization I/O — Verified Permissions client, Cedar policy sync, caching"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_authz"
path = "src/lib.rs"

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
aws-sdk-verifiedpermissions = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
