[package]
name = "forgegate_back_office"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "ForgeGate internal operations API — customer management, analytics, support"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgegate-back-office"
path = "src/main.rs"

[dependencies]
forgegate_core = { workspace = true }
forgegate_authn_core = { workspace = true }
forgegate_authz_core = { workspace = true }
forgegate_audit_core = { workspace = true }
forgegate_authn = { workspace = true }
forgegate_authz = { workspace = true }
forgegate_audit = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
