[package]
name = "forgeguard_back_office"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard internal operations API — customer management, analytics, support"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgeguard-back-office"
path = "src/main.rs"

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_authn_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_audit_core = { workspace = true }
forgeguard_authn = { workspace = true }
forgeguard_authz = { workspace = true }
forgeguard_audit = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
