[package]
name = "forgegate_cli"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "ForgeGate developer CLI — schema validation, policy testing, local dev"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgegate"
path = "src/main.rs"

[dependencies]
forgegate_core = { workspace = true }
forgegate_authn_core = { workspace = true }
forgegate_authz_core = { workspace = true }
forgegate_sdk = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
