[package]
name = "forgeguard_cli"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard developer CLI — schema validation, policy testing, local dev"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgeguard"
path = "src/main.rs"

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_authn_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_http = { workspace = true }
forgeguard_sdk = { workspace = true }
aws-config = { workspace = true }
aws-sdk-verifiedpermissions = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
