[package]
name = "forgeguard_cli"
version = "0.0.0"
publish = false
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard developer CLI — schema validation, policy testing, local dev"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgeguard"
path = "src/main.rs"

[dependencies]
aws-config = { workspace = true }
aws-sdk-verifiedpermissions = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
forgeguard_authn_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_core = { workspace = true }
forgeguard_http = { workspace = true }
forgeguard_sdk = { workspace = true }
owo-colors = { workspace = true }
rand = { workspace = true } #unified
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[lints]
workspace = true
