[package]
name = "forgeguard_control_plane"
version = "0.0.0"
publish = false
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard control plane — dashboard API server"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forgeguard-control-plane"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
forgeguard-axum = { workspace = true }
forgeguard_authn_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_core = { workspace = true }
forgeguard_http = { workspace = true }
forgeguard_proxy_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
