[package]
name = "forgeguard_control_plane"
version = "0.0.0"
publish = false
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard control plane — dashboard API server"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_control_plane"
path = "src/lib.rs"

[[bin]]
name = "forgeguard-control-plane"
path = "src/main.rs"

[features]
dynamodb-tests = []

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
forgeguard-axum = { workspace = true }
forgeguard_authn = { workspace = true }
forgeguard_authn_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_core = { workspace = true }
forgeguard_http = { workspace = true }
forgeguard_proxy_core = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true } #unified
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
