[package]
name = "forgegate_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "Shared primitives, traits, and error types for ForgeGate"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgegate_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
