[package]
name = "forgegate_ffi_python"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgegate"
description = "ForgeGate Python SDK — PyO3 bindings"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgegate_ffi_python"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
forgegate_core = { workspace = true }
forgegate_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
