[package]
name = "forgeguard_ffi_python"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard Python SDK — PyO3 bindings"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_ffi_python"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
