[package]
name = "forgeguard_ffi_wasm"
version = "0.0.0"
publish = false
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "ForgeGuard TypeScript SDK — WASM bindings"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_ffi_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
forgeguard_core = { workspace = true }
forgeguard_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
