[package]
name = "fg-lambdas"
version = "0.0.0"
publish = false
description = "ForgeGuard Lambda function binaries"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "control_plane"
path = "src/bin/control_plane.rs"

[[bin]]
name = "saga_trigger"
path = "src/bin/saga_trigger.rs"

[dependencies]
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sfn = { workspace = true }
color-eyre = { workspace = true }
forgeguard_control_plane = { path = "../control-plane" }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
serde_dynamo = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
