[package]
name = "forgeguard_proxy_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/forgeguard"
description = "Auth pipeline types and pure logic for ForgeGuard proxy (pure, no I/O). Internal dep — use forgeguard-axum for the public API."
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forgeguard_proxy_core"
path = "src/lib.rs"

[dependencies]
forgeguard_authn_core = { workspace = true }
forgeguard_authz_core = { workspace = true }
forgeguard_core = { workspace = true }
forgeguard_http = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
forgeguard_authn_core = { workspace = true } #unified
forgeguard_authz_core = { workspace = true } #unified
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
